Introduce aggregation method enum.